--- a/src/MEGASync/gui/ui/BugReportDialog.ui
+++ b/src/MEGASync/gui/ui/BugReportDialog.ui
@@ -26,45 +26,7 @@
    <string>Bug report</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#lAttachLogs
-{
-font-family: &quot;SF Pro Text&quot;;
-font-size: 12px;
-font-weight: 400;
-}
-
-#bSubmit
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
-
-#lDescInfoBug
-{
-color: #303233; /*colorToken.text-primary*/
-font-family: &quot;SF Pro Text&quot;;
-font-size: 12px;
-font-weight: 400;
-}
-
-#lTitle, #lDescribeBug
-{
-color: #303233; /*colorToken.text-primary*/
-font-family: &quot;SF Pro Text&quot;;
-font-size: 12px;
-font-weight: 600;
-}
-
-#teDescribeBug, #leTitleBug
-{
-border-radius: 8px;
-border-color: #D8D9DB; /*colorToken.border-strong*/
-border-style: solid;
-border-width: 1px;
-background-color: #FFFFFF; /*colorToken.page-background*/
-}
-
-#leTitleBug
+   <string notr="true">#leTitleBug
 {
 padding-left: 10px;
 height: 36px;
@@ -75,6 +37,11 @@ width: 432px;
 {
 height: 116px;
 width: 432px;
+}
+
+#lTitle, #lDescribeBug
+{
+font-weight: 600;
 }
 
 
@@ -133,6 +100,9 @@ width: 432px;
         <property name="placeholderText">
          <string>Optional</string>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -152,7 +122,14 @@ width: 432px;
        </widget>
       </item>
       <item>
-       <widget class="QTextEdit" name="teDescribeBug"/>
+       <widget class="QTextEdit" name="teDescribeBug">
+        <property name="cursor" stdset="0">
+         <cursorShape>IBeamCursor</cursorShape>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QWidget" name="wCheckBox" native="true">
@@ -174,45 +151,19 @@ width: 432px;
          </property>
          <item>
           <widget class="QCheckBox" name="cbAttachLogs">
-           <property name="text">
-            <string/>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="lAttachLogs">
-           <property name="minimumSize">
-            <size>
-             <width>350</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true"/>
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
            </property>
            <property name="text">
             <string>Attach diagnostic log files to assist with debugging</string>
            </property>
-           <property name="wordWrap">
+           <property name="checked">
             <bool>true</bool>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
+           </property>
           </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Orientation::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>1</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
          </item>
         </layout>
        </widget>
@@ -223,12 +174,6 @@ width: 432px;
    <item>
     <widget class="QWidget" name="wButtons" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="topMargin">
-       <number>15</number>
-      </property>
-      <property name="bottomMargin">
-       <number>15</number>
-      </property>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
@@ -244,18 +189,72 @@ width: 432px;
       </item>
       <item>
        <widget class="QPushButton" name="bCancel">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>36</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>36</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="text">
          <string>Cancel</string>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">outline</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">medium</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="bSubmit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>36</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>36</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="text">
          <string>Submit</string>
         </property>
         <property name="default">
          <bool>true</bool>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">primary</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">medium</string>
         </property>
        </widget>
       </item>
