--- a/src/MEGASync/gui/ui/ChangePassword.ui
+++ b/src/MEGASync/gui/ui/ChangePassword.ui
@@ -26,30 +26,7 @@
    <string>Change password</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#lNewPassword, #lConfirmNewPassword
-{
-border-radius: 8px;
-border-color: #D8D9DB; /*colorToken.border-strong*/
-border-style: solid;
-border-width: 1px;
-background-color: #FFFFFF; /*colorToken.page-background*/
-height: 30px;
-padding-left: 10px;
-}
-
-#bOk
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
-
-#lDescNewPassword, #lDescConfirmNewPassword
-{
-color: #303233; /*colorToken.text-primary*/
-font-family: &quot;SF Pro Text&quot;;
-font-size: 12px;
-font-weight: 400;
-}</string>
+   <string notr="true"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
@@ -112,6 +89,9 @@ font-weight: 400;
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -149,6 +129,9 @@ font-weight: 400;
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
         </property>
        </widget>
       </item>
@@ -200,11 +183,26 @@ font-weight: 400;
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>16</height>
+          <height>26</height>
          </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>26</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
          <string>Cancel</string>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">outline</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">small</string>
         </property>
        </widget>
       </item>
@@ -213,11 +211,26 @@ font-weight: 400;
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>16</height>
+          <height>26</height>
          </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>26</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
          <string>OK</string>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">primary</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">small</string>
         </property>
        </widget>
       </item>
