--- a/src/MEGASync/gui/ui/NotificationsSettings.ui
+++ b/src/MEGASync/gui/ui/NotificationsSettings.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>264</width>
-    <height>432</height>
+    <width>390</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string notr="true"/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1">
    <property name="leftMargin">
     <number>20</number>
    </property>
    <property name="topMargin">
-    <number>20</number>
+    <number>5</number>
    </property>
    <property name="rightMargin">
     <number>20</number>
@@ -31,43 +31,45 @@
      <property name="title">
       <string/>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_7">
+     <property name="type" stdset="0">
+      <string notr="true">mega</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="GeneralSwithState">
-          <property name="font">
-           <font>
-            <pointsize>13</pointsize>
-            <bold>true</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>System notifications:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="SwitchButton" name="GeneralSwitch" native="true">
-          <property name="NotificationType" stdset="0">
-           <UInt>0</UInt>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QLabel" name="GeneralSwithState">
+        <property name="font">
+         <font>
+          <pointsize>13</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>System notifications:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>130</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="SwitchButton" name="GeneralSwitch" native="true">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="NotificationType" stdset="0">
+         <UInt>0</UInt>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -79,7 +81,7 @@
        <number>0</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>10</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
@@ -92,17 +94,26 @@
         <property name="title">
          <string>Uploads and downloads</string>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <property name="bottomMargin">
           <number>10</number>
          </property>
          <item>
           <widget class="QCheckBox" name="CompletedUploadsDownloadsCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Completed uploads and downloads</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>8</UInt>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
            </property>
           </widget>
          </item>
@@ -114,37 +125,58 @@
         <property name="title">
          <string>Shares</string>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <property name="bottomMargin">
           <number>10</number>
          </property>
          <item>
           <widget class="QCheckBox" name="NewSharedCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>New shared folder from contact</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>1</UInt>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="AddOrRemovedFilesCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Added or removed files</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>2</UInt>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="RemovedAccessCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Access to a shared folder was removed</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>3</UInt>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
            </property>
           </widget>
          </item>
@@ -156,37 +188,58 @@
         <property name="title">
          <string>Contacts</string>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <property name="bottomMargin">
           <number>10</number>
          </property>
          <item>
           <widget class="QCheckBox" name="NewContactCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>New contact request</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>4</UInt>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="ContactReminderCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Pending contact request reminder</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>5</UInt>
            </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
+           </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="ContactAcceptedCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Someone has accepted your contact request</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>6</UInt>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
            </property>
           </widget>
          </item>
@@ -198,17 +251,26 @@
         <property name="title">
          <string>Info</string>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <property name="bottomMargin">
           <number>10</number>
          </property>
          <item>
           <widget class="QCheckBox" name="DesktopCheck">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
            <property name="text">
             <string>Info notifications</string>
            </property>
            <property name="NotificationType" stdset="0">
             <UInt>7</UInt>
+           </property>
+           <property name="type" stdset="0">
+            <string notr="true">mega</string>
            </property>
           </widget>
          </item>
@@ -221,7 +283,7 @@
    <item>
     <spacer name="verticalSpacer_2">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
