--- a/src/MEGASync/gui/ui/OpenBackupsFolder.ui
+++ b/src/MEGASync/gui/ui/OpenBackupsFolder.ui
@@ -40,6 +40,9 @@
      <property name="title">
       <string>Backup Folder</string>
      </property>
+     <property name="type" stdset="0">
+      <string notr="true">mega</string>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLineEdit" name="lBackupFolder">
@@ -55,10 +58,25 @@
         <property name="readOnly">
          <bool>true</bool>
         </property>
+        <property name="type" stdset="0">
+         <string notr="true">mega</string>
+        </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="bOpenBackupFolder">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>26</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>26</height>
+         </size>
+        </property>
         <property name="cursor">
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
@@ -67,6 +85,12 @@
         </property>
         <property name="default">
          <bool>false</bool>
+        </property>
+        <property name="type" stdset="0">
+         <string notr="true">outline</string>
+        </property>
+        <property name="dimension" stdset="0">
+         <string notr="true">small</string>
         </property>
        </widget>
       </item>
