--- a/src/MEGASync/gui/ui/RemoveBackupDialog.ui
+++ b/src/MEGASync/gui/ui/RemoveBackupDialog.ui
@@ -31,12 +31,6 @@ font-weight: 600;
 font-size:16px;
 }
 
-#bConfirm
-{
-color: #04101E; /*colorToken.text-inverse-accent*/
-background-color:  #F4F4F5; /*colorToken.button-primary*/
-}
-
 #rMoveFolder, #rDeleteFolder
 {
 font-weight: 600;
@@ -54,18 +48,18 @@ font-size:12px;
 border-radius: 8px;
 border-style: solid;
 border-width: 1px;
-background: #FFFFFF; /* colorToken.page-background*/
+background: #ffFFFFFF; /* colorToken.page-background*/
 padding-left: 10px;
 }
 
 #lTarget::enabled
 {
-border-color: #D8D9DB; /*colorToken.border-strong*/
+border-color: #ffD8D9DB; /*colorToken.border-strong*/
 }
 
 #lTarget::disabled
 {
-border-color: #D8D9DB; /*colorToken.border-disabled*/
+border-color: #ffD8D9DB; /*colorToken.border-disabled*/
 }
 
 #lMoveTo
@@ -77,17 +71,6 @@ font-size:12px;
 #moveToContainer *::disabled
 {
 color: rgba(0, 0, 0, 0.2)
-}
-
-#bChange
-{
-background-color:  #F3F4F4; /*colorToken.button-secondary*/
-color: #616366; /*colorToken.text-secondary*/
-border-color:  #F3F4F4; /*colorToken.button-secondary*/
-border-width: 0px;
-border-style: solid;
-border-radius: 5px;
-padding: 3px 10px 3px 10px;
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -139,6 +122,9 @@ padding: 3px 10px 3px 10px;
      </property>
      <item>
       <widget class="QRadioButton" name="rMoveFolder">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="text">
         <string>Move folder</string>
        </property>
@@ -225,18 +211,27 @@ padding: 3px 10px 3px 10px;
            <widget class="QPushButton" name="bChange">
             <property name="minimumSize">
              <size>
-              <width>85</width>
-              <height>35</height>
+              <width>90</width>
+              <height>36</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>16777215</width>
-              <height>35</height>
+              <width>90</width>
+              <height>36</height>
              </size>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="text">
              <string>Change</string>
+            </property>
+            <property name="type" stdset="0">
+             <string notr="true">secondary</string>
+            </property>
+            <property name="dimension" stdset="0">
+             <string notr="true">medium</string>
             </property>
            </widget>
           </item>
@@ -263,6 +258,9 @@ padding: 3px 10px 3px 10px;
      </item>
      <item>
       <widget class="QRadioButton" name="rDeleteFolder">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="text">
         <string>Delete folder permanently</string>
        </property>
@@ -331,8 +329,14 @@ padding: 3px 10px 3px 10px;
       <widget class="QPushButton" name="bCancel">
        <property name="minimumSize">
         <size>
-         <width>84</width>
-         <height>0</height>
+         <width>80</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>36</height>
         </size>
        </property>
        <property name="cursor">
@@ -347,6 +351,12 @@ padding: 3px 10px 3px 10px;
        <property name="flat">
         <bool>false</bool>
        </property>
+       <property name="type" stdset="0">
+        <string notr="true">outline</string>
+       </property>
+       <property name="dimension" stdset="0">
+        <string notr="true">medium</string>
+       </property>
       </widget>
      </item>
      <item>
@@ -354,7 +364,13 @@ padding: 3px 10px 3px 10px;
        <property name="minimumSize">
         <size>
          <width>146</width>
-         <height>0</height>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>36</height>
         </size>
        </property>
        <property name="cursor">
@@ -372,6 +388,12 @@ padding: 3px 10px 3px 10px;
        </property>
        <property name="flat">
         <bool>false</bool>
+       </property>
+       <property name="type" stdset="0">
+        <string notr="true">primary</string>
+       </property>
+       <property name="dimension" stdset="0">
+        <string notr="true">medium</string>
        </property>
       </widget>
      </item>
